# md2docx

./: .gitignore  BUILD.md  CHANGELOG.md  DEVELOPER.md  LICENSE  LINUX_COMPATIBILITY.md  LINUX_COMPATIBILITY_zh_CN.md  LOCAL_BUILD_GUIDE.md  README.md  README_zh_CN.md  build.py  build_local.py  build_macos_pyinstaller.py  check_icons.py  check_translations.py  debug_app.py  generate_icons.py  pyproject.toml  release.py  requirements-build.txt  requirements.txt  start.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  translation.md
.github/workflows/: README.md  build-release.yml
assets/icons/: README.md  app_icon.icns
config/: languages.json  settings.json
locales/: README.md  messages.json
locales/de_DE/: messages.json
locales/en_US/: messages.json
locales/es_ES/: messages.json
locales/fr_FR/: messages.json
locales/it_IT/: messages.json
locales/ja_JP/: messages.json
locales/ko_KR/: messages.json
locales/pt_PT/: messages.json
locales/ru_RU/: messages.json
locales/zh_CN/: messages.json
locales/zh_TW/: messages.json
packaging/: build_utils.py
packaging/linux/: build_linux.sh  setup_pyinstaller.py
packaging/macos/: build_macos.sh  build_macos_fast.py  setup_py2app.py  setup_simple.py
packaging/windows/: build_windows.bat  create_installer.py  setup_pyinstaller.py
releases/: README.md
releases/v1.0.0/: RELEASE_NOTES.md
src/: main.py
src/converter/: batch_converter.py  file_namer.py  pandoc_wrapper.py  progress_tracker.py
src/templates/: template_manager.py
src/ui/: file_list_item.py  main_window.py
src/utils/: config_manager.py  emoji_processor.py  file_scanner.py  i18n_manager.py  icon_manager.py  (+1 more)
templates/: README_template.txt  default.docx
