[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "py2app>=0.28; sys_platform == 'darwin'",
    "pyinstaller>=5.13; sys_platform != 'darwin'"
]
build-backend = "setuptools.build_meta"

[project]
name = "md2docx"
version = "1.0.0"
description = "A modern GUI application for converting Markdown files to DOCX documents using Pandoc."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "David Jia", email = "davidjia1972@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Text Processing :: Markup",
]
requires-python = ">=3.8"
dependencies = [
    "PySide6>=6.5.0,<7.0.0",
    "emoji>=2.2.0,<3.0.0", 
    "platformdirs>=3.0.0,<5.0.0",
]

[project.urls]
Homepage = "https://github.com/davidjia1972/md2docx"
Repository = "https://github.com/davidjia1972/md2docx.git"
Issues = "https://github.com/davidjia1972/md2docx/issues"
Documentation = "https://github.com/davidjia1972/md2docx#readme"

[project.scripts]
md2docx = "src.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.docx", "*.icns", "*.ico", "*.png"]